2004-07-29  Benjamin Otte  <otte@gnome.org>

	* gst/gstpad.c: (gst_pad_set_explicit_caps):
	  check that caps are fixed
	* gst/gstpad.c: (gst_pad_template_new):
	  don't try to simplify caps, costs too much time on gst_init
	* gst/gstplugin.c: (gst_plugin_add_feature):
	  G_ERROR if features are added twice
	* gst/gsttypefind.c: (gst_type_find_register):
	* gst/gstelementfactory.c: (gst_element_register):
	  don't add features twice
	* docs/random/ds/0.9-suggested-changes:
	  add note about possible gst_init optimization

2004-07-28  David Schleef  <ds@schleef.org>

	* testsuite/elements/Makefile.am:
	* testsuite/elements/struct_i386.h:
	* testsuite/elements/struct_size.c: (main):  A little test
	to keep distcheck from working if someone changes a structure
	size accidentally.

2004-07-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/libs/Makefile.am:
	* docs/libs/gstreamer-libs-docs.sgml:
	* docs/libs/gstreamer-libs-sections.txt:
	* docs/libs/tmpl/gstbytestream.sgml:
	* docs/libs/tmpl/gstcontrol.sgml:
	* docs/libs/tmpl/gstdataprotocol.sgml:
	* docs/libs/tmpl/gstgetbits.sgml:
	* libs/gst/bytestream/Makefile.am:
	* libs/gst/bytestream/bytestream.c:
	* libs/gst/bytestream/bytestream.h:
	* libs/gst/control/Makefile.am:
	* libs/gst/dataprotocol/Makefile.am:
	* libs/gst/getbits/Makefile.am:
	* libs/gst/getbits/getbits.h:
	  various doc and style fixes, adding bytestream to libs docs.

2004-07-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* docs/gst/gstreamer-docs.sgml:
	* docs/libs/Makefile.am:
	* docs/libs/gstreamer-libs-docs.sgml:
	* docs/libs/gstreamer-libs-sections.txt:
	* libs/gst/control/dparam.c:
	  more doc fixes.  gst-libs docs now build the same way as gst.

2004-07-28  Thomas Vander Stichele  <thomas at apestaart dot org>

	* configure.ac:
	* testsuite/Makefile.am:
	* testsuite/bins/Makefile.am:
	* testsuite/caps/Makefile.am:
	* testsuite/cleanup/Makefile.am:
	* testsuite/clock/Makefile.am:
	* testsuite/debug/Makefile.am: